log
Sun 24 Mar 2024 12:10:20 AM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|4
total_score: 10/70
817a9a7
Sun 24 Mar 2024 12:11:09 AM UTC: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  2|3
total_score: 20/70
6ad05b4
Sun 24 Mar 2024 12:11:51 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
810cdbe
Sun 24 Mar 2024 12:16:50 AM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:106:13: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  106 |     while (!is_empty(P1)) {
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8967fab
Sun 24 Mar 2024 12:19:34 AM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:17: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  130 |             if (is_empty(pila)) {
      |                 ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a8140ab
